Avoiding duplicates of edges - replaced list of edges with hash set - overrode the equals and hashCode method of CallGraphEdge for correct hashset behaviour